Added all the chnages for the RISCV intercept lib. Details will be added in doc.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -33,9 +33,12 @@ add_library(icap SHARED icap.c)
 
 target_link_libraries(icap PRIVATE syscall_intercept_shared)
 
-add_library(fork_ban SHARED fork_ban.c)
+# add_library(fork_ban SHARED fork_ban.c)
 
-target_link_libraries(fork_ban PRIVATE syscall_intercept_shared)
+# target_link_libraries(fork_ban PRIVATE syscall_intercept_shared)
 
 add_library(syscall_logger SHARED syscall_logger.c syscall_desc.c)
 target_link_libraries(syscall_logger PRIVATE syscall_intercept_shared)
+
+add_library(default_hook SHARED hook.c)
+target_link_libraries(default_hook PRIVATE syscall_intercept_shared)
